--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "react": "^0.14.7",
+    "react-addons-css-transition-group": "^15.3.1",
     "react-dom": "^0.14.7"
   },
   "description": ""
